--- a/css/layout/article-content.css
+++ b/css/layout/article-content.css
@@ -1,3 +1,6 @@
+.article-content-container {
+  background: rgba(255,255,255,0.9); /*白色半透明*/
+}
 .article-content-container .article-title {
   color: var(--second-text-color);
   font-weight: 600;
