--- a/css/layout/category-content.css
+++ b/css/layout/category-content.css
@@ -1,3 +1,6 @@
+.category-container {
+  background: rgba(255,255,255,0); /*白色半透明*/
+}
 .category-container .category-name {
   color: var(--second-text-color);
   font-size: 1.6rem;
