--- a/css/layout/tag-content.css
+++ b/css/layout/tag-content.css
@@ -1,3 +1,6 @@
+.tag-container {
+  background: rgba(255,255,255,0);
+}
 .tag-container .tag-name {
   color: var(--second-text-color);
   font-size: 1.6rem;
