--- a/css/layout/category-content.css
+++ b/css/layout/category-content.css
@@ -1,16 +1,1 @@
-.category-container {
-  background: rgba(255,255,255,0.8); /*白色半透明*/
-}
-.category-container .category-name {
-  color: var(--second-text-color);
-  font-size: 1.6rem;
-keep-tablet()
-keep-mobile()
-  font-weight: 600;
-  padding-bottom: 20px;
-  margin-bottom: $component-spacing-value;
-  border-bottom: 1px solid var(--border-color);
-}
-.category-container .category-name i {
-  color: var(--second-text-color);
-}
+.category-container{background:rgba(255,255,255,.8)}.category-container .category-name{color:var(--second-text-color);font-size:1.6rem;padding-bottom:20px;margin-bottom:$component-spacing-value;border-bottom:1px solid var(--border-color)}.category-container .category-name i{color:var(--second-text-color)}
