--- a/css/layout/tag-content.css
+++ b/css/layout/tag-content.css
@@ -1,16 +1,1 @@
-.tag-container {
-  background: rgba(255,255,255,0.8);
-}
-.tag-container .tag-name {
-  color: var(--second-text-color);
-  font-size: 1.6rem;
-keep-tablet()
-keep-mobile()
-  font-weight: 600;
-  padding-bottom: 20px;
-  margin-bottom: $component-spacing-value;
-  border-bottom: 1px solid var(--border-color);
-}
-.tag-container .tag-name i {
-  color: var(--second-text-color);
-}
+.tag-container{background:rgba(255,255,255,.8)}.tag-container .tag-name{color:var(--second-text-color);font-size:1.6rem;padding-bottom:20px;margin-bottom:$component-spacing-value;border-bottom:1px solid var(--border-color)}.tag-container .tag-name i{color:var(--second-text-color)}
